Add winapi internals to get process user

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,4 @@ libc = "0.2"
 thiserror = {version = "1.0", optional = true}
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["securitybaseapi", "accctrl", "aclapi", "winerror"] }
+winapi = { version = "0.3", features = ["securitybaseapi", "accctrl", "aclapi", "winerror", "handleapi"] }
