--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ all-features = true
 
 [features]
 default = ["std"]
-std = ["thiserror", "anyhow/std"]
+std = ["thiserror", "anyhow/std", "rustix/std"]
 # required features to run tests; additional features enable more tests
 dev = []
 
@@ -27,6 +27,9 @@ anyhow = { version = "1.0", default-features = false }
 cfg-if = "1.0"
 libc = "0.2.107"
 thiserror = { version = "1.0", optional = true }
+
+[target.'cfg(unix)'.dependencies]
+rustix = { version = "0.36", default-features = false, features = ["process"] }
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.43", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_Security_Authorization"] }
