--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,13 @@ dev = []
 [dependencies]
 anyhow = { version = "1.0", default-features = false }
 cfg-if = "1.0"
-libc = "0.2.107"
 thiserror = { version = "1.0", optional = true }
 
 [target.'cfg(unix)'.dependencies]
 rustix = { version = "0.36", default-features = false, features = ["process"] }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+libc = "0.2.107"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.43", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_Security_Authorization", "Win32_System_Diagnostics_Debug"] }
