--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ all-features = true
 
 [features]
 default = ["std"]
-std = ["thiserror", "anyhow/std", "rustix/std"]
+std = ["thiserror", "anyhow/std", "rustix/std", "rustix/procfs"]
 # enable anti-tracing techniques using unstable/undocumented APIs/OS implementation details
 unstable = []
 # required features to run tests; additional features enable more tests
@@ -30,7 +30,7 @@ cfg-if = "1.0"
 thiserror = { version = "1.0", optional = true }
 
 [target.'cfg(unix)'.dependencies]
-rustix = { version = "0.36", default-features = false, features = ["process"] }
+rustix = { version = "0.36.3", default-features = false, features = ["process"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libc = "0.2.107"
