--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,9 @@ libc = "0.2.107"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.43", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_Security_Authorization", "Win32_System_Diagnostics_Debug"] }
+
+[dev-dependencies]
+assert_cmd = "2.0"
+escargot = "0.5"
+predicates = "2.1"
+once_cell = "1.16"
