--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ all-features = true
 [features]
 default = ["std"]
 # enable functionality requiring std; note that on Windows we always depend on std transitively via the windows crate
-std = ["dep:thiserror", "anyhow/std", "rustix/std", "rustix/procfs"]
+std = ["dep:thiserror", "anyhow/std", "rustix/std", "dep:rustix-linux-procfs"]
 # enable anti-tracing techniques using unstable/undocumented APIs/OS implementation details
 unstable = ["windows/Wdk_System_Threading"]
 # required features to run tests; additional features enable more tests
@@ -29,10 +29,13 @@ dev = []
 [dependencies]
 anyhow = { version = "1.0", default-features = false }
 cfg-if = "1.0"
-thiserror = { version = "1.0", optional = true }
+thiserror = { version = "2.0", optional = true }
 
 [target.'cfg(unix)'.dependencies]
-rustix = { version = "0.38", default-features = false, features = ["process"] }
+rustix = { version = "1.0", default-features = false, features = ["process"] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+rustix-linux-procfs = { version = "0.1.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libc = "0.2.107"
